--- a/css/page.css
+++ b/css/page.css
@@ -1,5 +1,5 @@
 main{
-  grid-template-rows: 19vh 81vh repeat(2, 99vh);
+  grid-template-rows: 18vh 81vh 90vh 55.5vh;
 }
 .position-2-3{
   grid-column: 1/13;
@@ -13,24 +13,428 @@ main{
   grid-column: 1/13;
   grid-row: 4/-1;
 }
-.grid--12-2-0{
+.grid--12-3{
+  padding: 0 1.875em 0 1.875em;
   display: grid;
   column-gap: 1.5em;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 8% 68.5% 26.5%;
+}
+.grid--12-3-0{
   padding: 0 1.875em 0 1.875em;
-  grid-template-rows: 10% 80% 10%;
+  display: grid;
+  /* column-gap: 1.5em; */
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 8% 75% 13%;
+}
+.grid--12-3-1{
+  padding: 0 1.875em 0 1.875em;
+  display: grid;
+  column-gap: 1.5em;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 100%;
 }
 
-.title h3{
-  grid-column: 5/9;
-  grid-row: 1/-2;
+.aside--noticias{
+  grid-column: 2/5;
+  grid-row: 2/-2;
+  background: rgba(29, 45, 124, .7);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2em;
+  z-index: 2;
+}
+.aside--noticias figure{
+  margin: 0 auto;
+}
+.aside--noticias h1{
+  font-family: Amaranth;
+  font-size: 1.9rem;
   text-align: center;
+  color: white;
 }
-.content{
+.img--noticias{
   grid-column: 1/13;
-  grid-row: 2/-1;
+  grid-row: 2/-2;
+}
+.img--noticias2 {
+  grid-column: 1/13;
+  grid-row: 1/2;
+  /* height: 100%; */
+  /* object-fit: fill; */
+}
+.breadcrumb{
+  grid-column: 1/8;
+  grid-row: 1/2;
+  padding: 1em 0;
+  font-family: Raleway;
+}
+.copete__noticia{
+  margin-top: 2em;
+  border-top: 2px solid black;
+  grid-column: 2/12;
+  grid-row: 3/-1;
+  padding: 1em;
+  font-size: .9rem;
+  font-family: Raleway;
+  font-weight: bold;
+  text-align: justify;
 }
 
+.titulo__noticia{
+  grid-column: 1/9;
+  grid-row: 1/2;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 1.3rem;
+  font-weight: bold;
+  padding: .5em 0 0 0;
+  color: #1D2D7C;
+}
+.content__noticia{
+  grid-column: 1/9;
+  grid-row: 2/3;
+  font-size: 1rem;
+  font-family: Raleway;
+  text-align: justify;
+  line-height: 2em;
+  white-space: pre-line;
+  margin: 0 2em;
+}
+.footer__noticia{
+  grid-column: 1/13;
+  grid-row: 3/4;
+  background-color:rgba(29, 45, 124, 1);
+}
+.img2__noticia{
+  grid-column: 9/13;
+  /* grid-row: 2/3; */
+}
+.img2__noticia img{
+  /* border-radius: 10px 10px 0 0 ; */
+  margin: 0;
+}
+.flex-center{
+  align-self: center;
+}
+.aside-n{
+  width: 6.4em;
+  
+}
+.content__footer{
+  display: flex;
+  /* justify-content: space-between; */
+}
+.pie_de_foto{
+  font-size: .8rem;
+  /* padding: 1em; */
+  font-family: Raleway;
+  font-weight: lighter;
+  font-style: italic;
+  text-align: center;
+  /* grid-column: 9/13;
+  grid-row: 3/4; */
+  color: white;
+  width: 27em;
+  padding: 1.5em 0 0 0;
+  margin-right: 4em;
+}
+.pie_de_foto p {
+  margin-bottom: 1em;
+}
+.footer__datos{
+  margin-right: auto;
+  padding: 1.5em 0 0em 1em;
+}
+.footer__categoria li{
+  font-family: Raleway;
+  font-size: 1.3rem;
+  /* padding: .6em .3em .3em .3em; */
+  text-decoration: none;
+  list-style: none;
+  text-align: center;
+ 
+}
+.footer__categoria a{
+  text-decoration: none;
+  list-style: none;
+  color: white;
+}
+.footer__fecha{
+  margin-top: .5em;
+}
+.footer__fecha p{
+  /* padding: .3em; */
+  color: white;
+  font-family: Raleway;
+  font-size: 1rem;
+
+}
+.aside--noticias-2{
+  grid-column: 1/5;
+  grid-row: 2/-2;
+  background-color:rgba(29, 45, 124, .7);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1em 2em 0 2em;
+  z-index: 2;
+  margin-left: 1em;
+}
+.flex{
+  display: flex;
+}
+
+.texto-infografia{
+  font-size: 1.2rem;
+  line-height: 1.3em;
+  font-family: Raleway;
+  color: white;
+  text-align: justify;
+}
+.aside--n{
+  width: 7em;
+}
+
+@media (min-width: 1367px) and (max-width: 1600px){
+  main{
+    grid-template-rows: 21vh 80vh 93vh 55.6vh;
+  }
+  .grid--12-3-0{
+    grid-template-rows: 6% 74% 14%;
+  }
+  .breadcrumb{
+    padding: .7em 0;
+  }
+  .aside--noticias figure {
+    margin:  0 auto;
+  }
+  .img--noticias img {
+    width: 71.5em;
+    height: 25em;
+    object-fit: cover;
+  }
+  .copete__noticia h1 {
+    font-size: 1rem;
+  }
+  .titulo__noticia {
+    font-size: 1rem;
+    padding: 0;
+  }
+  .content__noticia {
+    font-size: .85rem;
+  }
+  .img2__noticia img {
+    width: 22.8em;
+    height: 40.5em;
+    margin: 0;
+    object-fit: cover;
+  }
+  .img--noticias2 img{
+    width: 71.5em;
+    height: 25.5em;
+    object-fit: cover;
+  }
+  .aside-n{
+    width: 5.6em;
+  }
+  .footer__datos{
+    margin-right: auto;
+    padding: .5em;
+  }
+  .footer__fecha p{
+    font-size: 1rem;
+  }
+  .pie_de_foto {
+    margin-right: 2em;
+  }
+  .texto-infografia {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 900px) and (max-width: 1366px) {
+  .aside--noticias{
+    padding: 1em;
+    grid-column: 1/5;
+    margin-left: 1.7em;
+  }
+  .aside--noticias h1{
+    font-size: 2rem;
+  }
+  .aside--n{
+    width: 6em;
+  }
+  .titulo__noticia {
+    font-size: .9rem;
+  }
+  .img--noticias{ 
+    grid-column: 1/13;
+    /* margin-right: .5em; */
+  }
+  .img--noticias img {
+    /* margin: 0 1em 0 1em; */
+    width: 70.5em;
+    height: 21.7em;
+    object-fit: cover;
+  }
+  .copete__noticia h1 {
+    font-size: 1rem;
+  }
+  .img2__noticia img{
+    width: 23.5em;
+    height: 34.5em;
+    object-fit: cover;
+  }
+  .content__noticia{
+    font-size: .9rem;
+    line-height: 1.3em;
+  }
+  .aside-n{
+    width: 5em;
+  }
+  .footer__categoria li{
+    font-size: 1rem;
+    padding: .5em 0 0 0;
+  }
+  .footer__fecha p{
+    font-size: .8rem;
+    padding: 0;
+  }
+  .footer__noticia{
+  }
+  .footer__datos {
+    padding: 0em 0 0em 1em;
+  }
+  .pie_de_foto {
+    padding-top: .5em;
+    margin-right: 1em;
+  }
+  .aside--noticias-2 {
+    margin-left: 2em;
+    grid-column: 1/5;
+  }
+  .breadcrumb{
+    padding: .5em 1.8em;
+  }
+  .img--noticias2 {
+    grid-column: 1/13;
+  }
+  .img--noticias2 img {
+    width: 70.5em;
+    height: 21.7em;
+    object-fit: cover;
+  }
+  .texto-infografia{
+    font-size: 1rem;
+  }
+}
 
 @media (min-width: 320px) and (max-width: 480px){
-  
+  main {
+    grid-template-rows: 128px 81vh auto auto;
+  }
+  .position-2-3 {
+    grid-column: 1/7;
+  }
+  .position-3-2 {
+    grid-column: 1/7;
+  }
+  .position-4-1 {
+    grid-column: 1/7;
+  }
+  .grid--12-3 {
+    grid-template-rows: 3% 34% 25% 40%;
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0;
+  }
+  .grid--12-3-0 {
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0;
+    grid-template-rows:  10% auto 7%;
+  }
+  .grid--12-3-1 {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 124%;
+    padding: 0;
+  }
+  .breadcrumb {
+    display: none;
+  }
+  .img--noticias {
+    /* display: none; */
+    grid-column: 1/7;
+    grid-row: 4/-1;
+    margin: 0 auto;
+  }
+  .img--noticias img {
+    height: 100%;
+    width: 20.5em;
+    object-fit: cover;
+  }
+  .aside--noticias {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    align-self: center;
+  }
+  .aside--noticias h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  .aside--n {
+    display: none;
+  }
+  .copete__noticia {
+    font-size: .5rem;
+    grid-row: 3/4;
+    grid-column: 1/7;
+    margin: 2em 2em 0 2em;
+  }
+  .titulo__noticia{
+    display: none;
+    font-size: 1rem;
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+  .content__noticia {
+    grid-column: 1/7;
+    grid-row: 1/-1;
+    font-size: .9rem;
+    white-space: pre-line;
+    line-height: 1.4em;
+
+  }
+  .content__noticia > p{
+    margin-bottom: 7em;
+  }
+  .footer__datos {
+
+  }
+  .img2__noticia {
+    grid-column: 1/7;
+  }
+  .img2__noticia img {
+    display: none;
+    
+  }
+  .footer__noticia {
+    grid-column: 1/7;
+  }
+  .pie_de_foto {
+    display: none;
+  }
+  .aside--noticias-2 {
+    display: none;
+  }
+  .img--noticias2 {
+    padding: 0;
+    grid-column: 1/7;
+    grid-row: 1/-1;
+    margin: 1em auto;
+  }
+  .img--noticias2 img  {
+    height: 100%;
+    width: 20.5em;
+    object-fit: cover;
+  }
 }
