--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -12,10 +12,6 @@ main{
   /* grid-row: 2/-2; */
 }
 
-.sellos {
-  display: none;
-}
-
 /* Interior */
 .carta__container{
   grid-column: 1/10;
@@ -262,7 +258,26 @@ main{
     height: 9.7em;
   }
   .sellos{
-    display: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 2em;
+    justify-content: space-between;
+    gap: 1em;
+  }
+  .sellos img{
+    width: 3.5em;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    
+    -webkit-filter: drop-shadow(0px 0px 5px .5em #000);
+    filter: drop-shadow(0px 0px 5px .5em #000);
+  }
+  .carta--titulo h3{
+    font-size: 1.3rem;
+  }
+  .carta--titulo {
+    grid-column: 6/12;
   }
 }
 
@@ -317,7 +332,42 @@ main{
     width: 10em;
   }
   .sellos{
-    display: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 2em;
+    justify-content: space-between;
+    gap: 1em;
+  }
+  .sellos img{
+    width: 3.5em;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    
+    -webkit-filter: drop-shadow(0px 0px 5px .5em #000);
+    filter: drop-shadow(0px 0px 5px .5em #000);
+  }
+  .icono--servicio{
+    grid-column: 1/4;
+    margin: 0 auto;
+  }
+  .icono--servicio h2 {
+    margin-left: 0;
+  }
+  .galeria--productos {
+    grid-column: 4/10;
+  }
+  .producto{
+    margin: 0 auto;
+  }
+  .producto img{
+    height: 7.7em;
+  }
+  .carta--titulo {
+    grid-column: 5/12;
+  }
+  .carta--content{
+    grid-column: 5/12;
   }
 }
 
