--- a/css/page.css
+++ b/css/page.css
@@ -42,7 +42,7 @@ main{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 2em;
+  padding: 5em 2em 2em 2em;
   z-index: 2;
 }
 .aside--noticias figure{
@@ -67,8 +67,9 @@ main{
 .breadcrumb{
   grid-column: 1/8;
   grid-row: 1/2;
-  padding: 1em 0;
+  padding: 1.3em 0;
   font-family: Raleway;
+  height: max-content;
 }
 .copete__noticia{
   margin-top: 2em;
@@ -76,7 +77,7 @@ main{
   grid-column: 2/12;
   grid-row: 3/-1;
   padding: 1em;
-  font-size: .9rem;
+  font-size: .8rem;
   font-family: Raleway;
   font-weight: bold;
   text-align: justify;
@@ -87,7 +88,7 @@ main{
   grid-row: 1/2;
   text-align: center;
   font-family: Raleway;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: bold;
   padding: .5em 0 0 0;
   color: #1D2D7C;
@@ -98,9 +99,9 @@ main{
   font-size: 1rem;
   font-family: Raleway;
   text-align: justify;
-  line-height: 2em;
+  line-height: 1.5em;
   white-space: pre-line;
-  margin: 0 2em;
+  margin: 0 3em 0 1em;
 }
 .footer__noticia{
   grid-column: 1/13;
@@ -131,7 +132,6 @@ main{
   /* padding: 1em; */
   font-family: Raleway;
   font-weight: lighter;
-  font-style: italic;
   text-align: center;
   /* grid-column: 9/13;
   grid-row: 3/4; */
@@ -143,18 +143,38 @@ main{
 .pie_de_foto p {
   margin-bottom: 1em;
 }
+.pie_de_foto-2{
+  grid-row: 1/-1;
+  grid-column: 7/12;
+  z-index: 2;
+  color: white;
+  background-color: #1D2D7C;
+  height: 9em;
+  margin-top: auto;
+  font-size: .8rem;
+  /* padding: 1em; */
+  font-family: Raleway;
+  font-weight: lighter;
+  text-align: center;
+  padding:2em;
+  border-radius: 10px 10px 0 0;
+}
+.pie_de_foto-2 p {
+  margin-bottom: 1em;
+}
 .footer__datos{
   margin-right: auto;
-  padding: 1.5em 0 0em 1em;
+  /* padding: 1.5em 0 0em 1em; */
+  color: white;
 }
-.footer__categoria li{
+.footer__categoria{
   font-family: Raleway;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   /* padding: .6em .3em .3em .3em; */
   text-decoration: none;
   list-style: none;
   text-align: center;
- 
+  width: max-content;
 }
 .footer__categoria a{
   text-decoration: none;
@@ -207,6 +227,9 @@ main{
   .breadcrumb{
     padding: .7em 0;
   }
+  .aside--noticias{
+    padding: 3em 2em 2em 2em;
+  }
   .aside--noticias figure {
     margin:  0 auto;
   }
@@ -241,7 +264,8 @@ main{
   }
   .footer__datos{
     margin-right: auto;
-    padding: .5em;
+    padding: .8em;
+    height: max-content;
   }
   .footer__fecha p{
     font-size: 1rem;
@@ -249,13 +273,14 @@ main{
   .pie_de_foto {
     margin-right: 2em;
   }
+
   .texto-infografia {
     font-size: 1rem;
   }
 }
 @media (min-width: 900px) and (max-width: 1366px) {
   .aside--noticias{
-    padding: 1em;
+    padding: 2em 2em 2em 2em;
     grid-column: 1/5;
     margin-left: 1.7em;
   }
@@ -304,11 +329,16 @@ main{
   .footer__noticia{
   }
   .footer__datos {
-    padding: 0em 0 0em 1em;
+    padding: .4em 0 0em 1em;
+    height: max-content;
   }
   .pie_de_foto {
     padding-top: .5em;
-    margin-right: 1em;
+    margin-right: 3em;
+    font-size: .7rem;
+  }
+  .pie_de_foto-2{
+    font-size: .7rem;
   }
   .aside--noticias-2 {
     margin-left: 2em;
