--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,9 @@ nav{
   /* nav a:visited{
     /* color: #F4CE00; */
   
-
+.nav-mobile {
+  display: none;
+}
 /* Onscrooll navbar */
 .nav--onscroll{
     display: none;
@@ -557,7 +559,7 @@ footer{
    /* footer grid  */
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 38vh 45vh 20vh;
+  grid-template-rows: 38vh 45vh 23vh;
   column-gap: 2em;
   height: 98vh;
   background-size: 400px;
@@ -571,16 +573,18 @@ footer{
   .footer__section{
     background-color: #222C3E;
     grid-column: 1/13;
-    padding-top: 3em;
+    /* padding-top: 3em; */
      
   }
   .footer__content{
     display: flex;
-    width: 90vw;
-    margin: auto;
+    width: 71vw;
+    padding: 5em 0 0 0;
+    margin: 0 auto;
+    /* margin: auto; */
     /* flex-wrap: wrap; */
     justify-content:space-between;   
-    padding: 3em;
+    /* margin-top: 2em; */
   }
   .footer__logo{
     /* grid-column: 2/3; */
@@ -614,7 +618,7 @@ footer{
   }
   .footer__text{
     align-self: center;
-    margin-left: 3em; 
+    /* margin-left: 3em;  */
   }
   .btn__container{
     align-self:center;
@@ -681,6 +685,9 @@ footer{
     align-self: center;
     text-align: center;
   }
+  .footer *{
+    margin-top: .3em;
+  }
   .footer h2{
     font-weight: 900;
     font-size: .8rem;
@@ -688,9 +695,9 @@ footer{
   .footer p {
     font-size: .7rem;
   }
-  .footer :last-child{
+  /* .footer :last-child{
     font-size: .6rem;
-  }
+  } */
 /* End Footer */
 
 
@@ -760,7 +767,7 @@ MEDIA QUERYS
     font-size: 1.8rem;
   }
   .footer__content{
-    padding: 1.8em 0;
+    padding: 4em 0 0 0;
   }
 }
 @media (min-width: 900px) and (max-width: 1366px){
@@ -838,7 +845,7 @@ MEDIA QUERYS
     margin: 2em 1em 2em 3em;
   }
   .footer__content{
-    padding: 0;
+    padding: 3em 0 0 0;
   }
   .footer-logo{
     height: 15%;
@@ -894,13 +901,13 @@ MEDIA QUERYS
   .grid--12-2{
     padding: 0;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 67vh 13vh;
+    grid-template-rows: 70vh 10vh;
   }
   .grid--12-2-0{
     padding: 0;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 64vh 13vh;
+    grid-template-rows: 10vh 70vh;
   }
   .carousel {
     display: none;
@@ -952,8 +959,9 @@ MEDIA QUERYS
     flex-direction: column;
     /* padding: 0 1em 1em 1em; */
     max-height: 64vh;
-    gap: .5em;
+    gap: 2.5em;
     justify-content: space-evenly;
+    padding-top: 2.5em;
   }
   .cartas{
     min-width: 80vw;
@@ -1001,7 +1009,7 @@ MEDIA QUERYS
     display: none;
   }
   .aside--s{
-    width: 11vw;
+    width: 8vw;
     margin: .7em 1em;
   }
   .productos {
@@ -1009,8 +1017,8 @@ MEDIA QUERYS
   }
   .aside--productos{
     grid-column: 1/7;
-    grid-row: 2/-1;
-    flex-direction: row;
+    grid-row: 1/-2;
+    flex-direction: row-reverse;
   }
   .aside--productos p {
     /* font-size: 1.7vh; */
@@ -1023,7 +1031,7 @@ MEDIA QUERYS
     align-self: center;
   }
   .aside--p {
-    width: 12vw;
+    width: 9vw;
     margin: .8em 1em;
   }
   .aside-title-productos {
@@ -1045,11 +1053,12 @@ MEDIA QUERYS
   }
   .cartas__container--productos{
     grid-column: 1/7;
-    grid-row: 1/4;
+    grid-row: 2/4;
     flex-direction: column;
     max-height: 64vh;
-    gap: .5em;
+    gap: 2.5em;
     justify-content: space-evenly;
+    padding-top: 2.5em;
   }
   
   nav li .sub-menu{
@@ -1059,7 +1068,7 @@ MEDIA QUERYS
   footer{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 16vh 81vh 15vh;
+    grid-template-rows: 16vh 76vh 16vh;
     column-gap: 2em;
     height: 98vh;
     background-size: 400px;
@@ -1082,26 +1091,39 @@ MEDIA QUERYS
     margin: 0 0 1em 0;
     text-align: center;
   }
+  .footer__text p{
+    font-size: .59rem;
+  }
   .footer__text h4{
     margin-bottom: 0;
+    font-size: .79rem;
   }
   .footer__text--sitios{
     text-align: center;
+    width: 16em;
+    margin-bottom: 1.5em;
+  }
+  .footer__text--sitios p{
+    font-size: .59rem;
   }
   .footer__text--sitios h2 {
     margin-bottom: .5em;
+    font-size: .79rem;
   }
   .footer__text--sitios h3 {
     margin-bottom: .2em;
+    font-size: .75rem;
   }
   .footer__logos{
     flex-direction: row;
-    justify-content: space-evenly;
-    height: 5em;
-    margin: .3em 0 0 0;
+    justify-content: space-around;
+    height: 5.5em;
   }
-  .footer {
-    margin-top: 2em;
+  .footer h2 {
+    font-size: .7rem;
+  }
+  .footer p {
+    font-size: .6rem;
   }
   .footer--img{
     background-image: url(../images/footer-mobile.svg);
@@ -1111,6 +1133,56 @@ MEDIA QUERYS
     background-size: contain;
     background-position: bottom;
   }
-  
+
+
+  #nav-secondary{
+    display: none;
+  } 
+  #nav-fixed{
+    display: none;
+  }
+  nav a {
+   text-decoration: underline;
+  }
+  .nav-mobile {
+    display: block;
+  }
+  .nav__mobile {
+    display: none;
+    border-radius: 0px 0px 10px 10px;
+    height: 80vh;
+    background: linear-gradient(90.28deg, #082B7D 0%, #0465D6 100%);
+    padding-top: 1.8em;
+  }
+  nav li .sub-menu {
+    display: block;
+    z-index: 1;
+    margin-bottom: 1em;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .0);
+    background: none;
+  }
+  nav li .sub-menu a {
+    color: white;
+  }
+  .nav__mobile > li:nth-last-child(2){
+    margin-top: 13em;
+  }
+  .icon{
+    display: block;
+    position: absolute;
+    top: 2.8em;
+    left: 4.2em;
+    font-size: 2rem;
+  }
+  .icon-onscroll{
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 4.2em;
+    font-size: 2rem;
+  }
+  #up-arrow {
+    display: none;
+  }
   }
 
