--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -334,12 +334,12 @@ main{
   .sellos{
     display: flex;
     flex-wrap: wrap;
-    margin: 0 2em;
+    margin: 1em 2em 0 2em;
     justify-content: space-between;
     gap: 1em;
   }
   .sellos img{
-    width: 3.5em;
+    width: 3em;
     height: auto;
     padding: 0;
     margin: 0;
