--- a/css/page.css
+++ b/css/page.css
@@ -99,7 +99,7 @@ main{
   font-size: 1rem;
   font-family: Raleway;
   text-align: justify;
-  line-height: 1.5em;
+  line-height: 2em;
   white-space: pre-line;
   margin: 0 3em 0 1em;
 }
@@ -362,7 +362,7 @@ main{
 
 @media (min-width: 320px) and (max-width: 480px){
   main {
-    grid-template-rows: 128px 81vh auto auto;
+    grid-template-rows: 128px 80vh 177vh max-content;
   }
   .position-2-3 {
     grid-column: 1/7;
@@ -374,18 +374,18 @@ main{
     grid-column: 1/7;
   }
   .grid--12-3 {
-    grid-template-rows: 3% 34% 25% 40%;
+    grid-template-rows: 40% max-content 38vh ;
     grid-template-columns: repeat(6, 1fr);
     padding: 0;
   }
   .grid--12-3-0 {
     grid-template-columns: repeat(6, 1fr);
     padding: 0;
-    grid-template-rows:  10% auto 7%;
+    grid-template-rows: 15% max-content max-content;
   }
   .grid--12-3-1 {
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 124%;
+    grid-template-rows: max-content;
     padding: 0;
   }
   .breadcrumb {
@@ -394,7 +394,7 @@ main{
   .img--noticias {
     /* display: none; */
     grid-column: 1/7;
-    grid-row: 4/-1;
+    grid-row: 1/2;
     margin: 0 auto;
   }
   .img--noticias img {
@@ -408,17 +408,31 @@ main{
     align-self: center;
   }
   .aside--noticias h1 {
-    font-size: 2rem;
-    text-align: center;
+    font-size: 1rem;
+    text-align: left;
+    padding: .5em 2.3em;
   }
-  .aside--n {
+  .aside--n-2 {
+    display: block;
+    width: 9em;
+  }
+  .aside--n{
     display: none;
+  }
+  .aside-n{
+    width: 4.5em;
+    margin-right: auto;
   }
   .copete__noticia {
     font-size: .5rem;
     grid-row: 3/4;
     grid-column: 1/7;
-    margin: 2em 2em 0 2em;
+    margin: 0em 2em;
+    background: rgba(29, 45, 124, 1);
+    padding: 3em;
+    border-radius: 0px 0px 10px 10px;
+    color: white;
+    line-height: 1.2;
   }
   .titulo__noticia{
     display: none;
@@ -428,30 +442,52 @@ main{
   }
   .content__noticia {
     grid-column: 1/7;
-    grid-row: 1/-1;
+    grid-row: 2/3;
     font-size: .9rem;
     white-space: pre-line;
     line-height: 1.4em;
+    margin: 9em 1.5em;
 
   }
   .content__noticia > p{
-    margin-bottom: 7em;
+    margin-bottom: 0em;
   }
-  .footer__datos {
-
+  .footer__datos-2 {
+    margin: 4em 0;
+    display: flex;
+    gap: 2em;
+  }
+  .flex-end {
+    align-self: end;
+  }
+  .footer__categoria{
+    font-size: 1rem;
+  }
+  .footer__fecha p{
+    font-size: .8rem;
   }
   .img2__noticia {
     grid-column: 1/7;
+    grid-row: 1/2;
   }
   .img2__noticia img {
-    display: none;
-    
+    display: block;
+    width: 100vw;
+    height: 180%;
+    object-fit: cover;
   }
   .footer__noticia {
+    display: none;
     grid-column: 1/7;
+    height: max-content;
+
   }
   .pie_de_foto {
-    display: none;
+    display: block;
+  }
+  .pie_de_foto-2 {
+    font-size: .5rem;
+    grid-column: 2/6;
   }
   .aside--noticias-2 {
     display: none;
@@ -460,11 +496,23 @@ main{
     padding: 0;
     grid-column: 1/7;
     grid-row: 1/-1;
-    margin: 1em auto;
+    margin:0;
   }
   .img--noticias2 img  {
     height: 100%;
-    width: 20.5em;
+    width: 22.5em;
     object-fit: cover;
+    margin-bottom: 5em;
   }
+  .aside--noticias {
+    grid-row: 2/3;
+    background: rgba(29, 45, 124, 1);
+    padding: 0;
+  }
+  .footer__datos{
+    margin-top: .5em;
+    margin-right: 1em;
+    text-align: center;
+  }
+  
 }
