--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -373,10 +373,10 @@ main{
 
 @media (min-width: 320px) and (max-width: 480px) {
   main{
-    grid-template-rows: 21vh 130vh 195vh;
+    grid-template-rows: 21vh 130vh 218vh;
   }
   .grid--12-2{
-    grid-template-rows: 77% 170% 7%;
+    grid-template-rows: 77% 13% max-content;
   }
   .position-2-1{
     grid-column: 1/7;
@@ -481,12 +481,12 @@ main{
   }
   .galeria--productos{
     grid-column: 1/7;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-template-columns: none;
     grid-template-rows: auto;
     justify-content: center;
-    gap: 0;
-    margin-top: 0;
+    gap: .5em;
+    margin-top: .3em;
   }
   .position-1{
     align-self:  center;
@@ -496,23 +496,39 @@ main{
     align-self: center;
   }
   .producto img {
-    height: 14em;
+    height: 14.5em;
     width: auto;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+    object-fit: cover;
   }
   .icono--servicio{
     display: none;
   }
   .aside--right {
     grid-column: 1/7 ;
-    grid-row: 3/4 ;
+    grid-row: 2/3;
   }
   .aside--right h1 {
     margin: .3em auto;
     font-size: 2rem;
-    
-    
   }
   .aside--right img {
+    /* display: none; */
+    width: 2.2em;
+  }
+  .aside-r-img{
     display: none;
+  }
+  .sellos {
+    /* margin: 0; */
+  }
+  .aside--right {
+    justify-content: space-around;
+    gap: 0em;
+    /* margin: 1]em 0; */
+
+  }
+  .aside--right h1{
+    margin: 0;
   }
 }
