--- a/css/page.css
+++ b/css/page.css
@@ -126,6 +126,7 @@ main{
 .content__footer{
   display: flex;
   /* justify-content: space-between; */
+  gap: 1em;
 }
 .pie_de_foto{
   font-size: .8rem;
@@ -166,6 +167,7 @@ main{
   margin-right: auto;
   /* padding: 1.5em 0 0em 1em; */
   color: white;
+  align-self: center;
 }
 .footer__categoria{
   font-family: Raleway;
@@ -204,6 +206,7 @@ main{
 }
 .flex{
   display: flex;
+  gap: 1em;
 }
 
 .texto-infografia{
@@ -260,18 +263,21 @@ main{
     object-fit: cover;
   }
   .aside-n{
-    width: 5.6em;
+    width: 4em;
+  
   }
   .footer__datos{
     margin-right: auto;
     padding: .8em;
     height: max-content;
+    align-self: auto;
   }
   .footer__fecha p{
     font-size: 1rem;
   }
   .pie_de_foto {
     margin-right: 2em;
+    padding: .5em;
   }
 
   .texto-infografia {
@@ -316,7 +322,7 @@ main{
     line-height: 1.3em;
   }
   .aside-n{
-    width: 5em;
+    width: 3.5em;
   }
   .footer__categoria li{
     font-size: 1rem;
@@ -331,11 +337,15 @@ main{
   .footer__datos {
     padding: .4em 0 0em 1em;
     height: max-content;
+    align-self: flex-start;
   }
   .pie_de_foto {
     padding-top: .5em;
     margin-right: 3em;
     font-size: .7rem;
+  }
+  .pie_de_foto p {
+    margin-bottom: .5em;
   }
   .pie_de_foto-2{
     font-size: .7rem;
