--- a/css/home.css
+++ b/css/home.css
@@ -294,7 +294,7 @@ main {
 }
 
 /* Mobile */
-@media (min-width: 320px) and (max-width: 480px){ 
+@media (min-width: 320px) and (max-width: 399px){ 
   main{
     grid-template-rows: 20vh 76vh 1vh;
   }
@@ -311,7 +311,7 @@ main {
     grid-column: 1/7;
     grid-row: 1/2;
     width: max-content;
-    margin: 1em auto;
+    margin: 2em auto 1em;
     padding: 0;
     gap: 2.4em;
   }
@@ -421,4 +421,129 @@ main {
   }
 }
 
-  
+@media (min-width: 399px) and (max-width: 480px){ 
+  main{
+    grid-template-rows: 20vh 76vh 1vh;
+  }
+  .grid--12-2 {
+    grid-template-rows: 63vh 10vh;
+  }
+  .position-2-2 {
+    grid-column: 1/7;
+  }
+  .title--noticias {
+    display: none;
+  }
+  .cartas__container--noticias {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    width: max-content;
+    margin: 2em auto;
+    padding: 0;
+    gap: 2.4em;
+  }
+  .cartas--noticias {
+    width: 44.5vw;
+    min-width: 77vw;
+    border-radius: 10px;
+    /* max-width: 44.5vw; */
+    max-height: 16.1vh;
+  }
+  .texto__container h1{
+    grid-column: 1/5;
+    grid-row: 1/4;
+    height: 100%;
+    border-radius: 0 9px 0 0;
+    background: rgba(29, 45, 124, 1);
+  }
+  .extracto__noticias {
+    display: none;
+  }
+  .autor__noticias {
+    display: none;
+  };
+  .autor__noticias {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    margin: 0 1em;
+    text-align: center;
+    padding-top: 1em;
+    color: white;
+  }
+  .texto__container a {
+    grid-column: 2/5;
+    margin-top: .5em;
+  }
+  .cartas--noticias img{
+    width: 115px;
+    object-fit: cover;
+    height: auto;
+  }
+  .img--noticias {
+    border-radius: 9px 0px 0px 9px;
+  }
+  .aside--noticias {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    flex-direction: row;
+    background: rgba(29, 45, 124, 1);
+    height: 4em;
+    z-index: 0;
+  }
+  .aside--n {
+    width: 14vw;
+    margin: .3em 1em 0em 1em;
+  }
+  .aside-title{
+    display: none;
+  }
+  .aside--noticias p {
+    margin-top: 0em;
+    flex-grow: 2;
+    font-size: 1.5rem;
+    padding: 0;
+    align-self: center;
+    text-align: center;
+    
+  }
+  .paginacion {
+    display: none;
+  }
+  .aside--n{
+    display: none;
+  }
+  .paginacion2{
+    display: flex;
+    /* gap: 1em; */
+    grid-column: 1/7;
+    grid-row: 2/3;
+    z-index: 2;
+    /* padding: 1em; */
+    margin: auto 0;
+    justify-content: space-evenly;
+  }
+  .btn-posts {
+    width: 6em;
+    border: none;
+    align-self: center;
+    font-family: Raleway;
+    color: black;
+  }
+  .mobile-title-noticias{
+    font-family: Raleway;
+    color: white;
+    font-size: 1.8rem;
+    padding: 0;
+    font-weight: 600;
+    /* line-height: 1.45em; */
+    text-align: center;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* margin-top: 4em; */
+  }
+  .btn__noticias {
+    height: 1.5em;
+    /* width: 10px; */
+  }
+}
