--- a/css/main.css
+++ b/css/main.css
@@ -912,7 +912,7 @@ MEDIA QUERYS
 }
 
 /* Mobile */
-@media (min-width: 320px) and (max-width: 480px){
+@media (min-width: 320px) and (max-width: 399px){
   /* MAIN */
   main{
     grid-template-columns: repeat(6, 1fr);
@@ -1089,7 +1089,7 @@ MEDIA QUERYS
   footer{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 16vh 66vh 16vh;
+    grid-template-rows: 16vh 82vh 16vh;
     column-gap: 2em;
     height: 98vh;
     background-size: 400px;
@@ -1172,7 +1172,7 @@ MEDIA QUERYS
   .nav__mobile {
     display: none;
     border-radius: 0px 0px 10px 10px;
-    height: 59vh;
+    height: 79vh;
     background: linear-gradient(90.28deg, #082B7D 0%, #0465D6 100%);
     padding-top: 1.8em;
   }
@@ -1187,15 +1187,339 @@ MEDIA QUERYS
     color: white;
   }
   .nav__mobile > li:nth-last-child(2){
-    margin-top: 13em;
+    margin-top: 4em;
   }
   .icon{
     display: block;
+    /* position: absolute; */
+    /* left: 4.1em; */
+    font-size: 2rem;
+  }
+  #down-arrow {
+    margin: 0 4em;
+  }
+  #up-arrow {
+    margin: 0 4em;
+  }
+  
+  .icon-onscroll{
+    display: block;
     position: absolute;
+    top: 0px;
+    left: 4.2em;
+    font-size: 2rem;
+  }
+  #up-arrow {
+    display: none;
+  }
+
+  .rrss-icons{
+    flex-direction: row;
+    margin-bottom: .8em;
+  }
+  .rrss-icons a img {
+    width: 1.2em;
+    height: auto;
+    /* background-color: white; */
+  }
+  /* menu andacollo */
+  .menu-item-514{
+    /* margin-top: 4.5em; */
+    margin-bottom: 4.5em;
+  }
+  /* menu vitrina */
+  .menu-item-557 {
+    margin-bottom: 12.5em;
+  }
+  }
+
+
+
+/* Mobile 2 - 412px 809px*/ 
+@media (min-width: 400px) and (max-width: 480px){
+  main{
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 128px 80vh 77vh ;
+    column-gap: 5px;
+  }
+  .grid--12-2{
+    padding: 0;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 70vh 10vh;
+  }
+  .grid--12-2-0{
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 10vh 70vh;
+  }
+  .icon{
+    display: block;
+    /* position: absolute; */
     /* top: 2.8em;
     top: 4em; */
-    left: 5em;
+    /* left: 5em; */
     font-size: 2rem;
+  }
+  #down-arrow {
+    margin: 0 5em;
+  }
+  #up-arrow {
+    margin: 0 5em;
+  }
+  .nav__mobile {
+    display: none;
+    border-radius: 0px 0px 10px 10px;
+    height: 62vh;
+    background: linear-gradient(90.28deg, #082B7D 0%, #0465D6 100%);
+    padding-top: 1.8em;
+  }
+
+  .carousel {
+    display: none;
+  }
+  header {
+    grid-template-rows: 77%;
+    grid-column: 1/7;
+  }
+  .header__image{
+    object-fit: cover;
+  }
+  nav {
+    border-radius: 0;
+    height: 40px;
+    /* padding: .5em; */
+  }
+  nav a{
+    margin:0 1em;
+    font-size: .8rem;
+  }
+  .nav li {
+    margin-right: .4em;
+  }
+  nav li{
+    height: 2.4em;
+    padding: .6em;
+  }
+  .onscroll {
+    height: inherit;
+  }
+  .carousel img{
+    width: 100%;
+    padding: 0;
+  }
+  .servicios {
+    grid-column: 1/7;
+  }
+  .servicios h2{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: .6em;
+    display: none;
+  }
+  .cartas__container{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    flex-direction: column;
+    /* padding: 0 1em 1em 1em; */
+    max-height: 64vh;
+    gap: 2.5em;
+    justify-content: space-evenly;
+    padding-top: 2.5em;
+  }
+  .cartas{
+    min-width: 80vw;
+    position: relative;
+    /* max-height: 100%; */
+    /* width: 100%; */
+    height: 16vh;
+  }
+  .cartas img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .titulo__container{
+    margin-top: 0;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+  }
+  .titulo__container p{
+    padding: .2em;
+    font-size: .9rem;
+    height: 30px;
+    
+  }
+  .aside--servicios{
+    grid-column: 1/7;
+    grid-row: 2/-1;
+    flex-direction: row;
+  }
+  .aside--servicios p{
+    /* grid-column: 1/2; */
+    /* font-size: 1.7vh; */
+    font-size: 1.8rem;
+    padding: 0;
+    /* margin: 2.5em 1em; */
+    text-align: center;
+    margin-top: 0;
+    flex-grow: 2;
+    align-self: center;
+  }
+  .aside-title-servicios {
+    display: none;
+  }
+  .aside--s{
+    width: 8vw;
+    margin: .7em 1em;
+  }
+  .productos {
+    grid-column: 1/7;
+  }
+  .aside--productos{
+    grid-column: 1/7;
+    grid-row: 1/-2;
+    flex-direction: row-reverse;
+  }
+  .aside--productos p {
+    /* font-size: 1.7vh; */
+    font-size: 1.8rem;
+    padding: 0;
+    /* margin: 2.5em 1em; */
+    text-align: center;
+    margin-top: 0;
+    flex-grow: 2;
+    align-self: center;
+  }
+  .aside--p {
+    width: 9vw;
+    margin: .8em 1em;
+  }
+  .aside-title-productos {
+    display: none;
+  }
+  .mobile-title-productos{
+    display: block;
+  }
+  .mobile-title-servicios{
+    display: block;
+  }
+  .productos h2{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 1em;
+    display: none;
+  }
+  .cartas__container--productos{
+    grid-column: 1/7;
+    grid-row: 2/4;
+    flex-direction: column;
+    max-height: 64vh;
+    gap: 2.5em;
+    justify-content: space-evenly;
+    padding-top: 2.5em;
+  }
+  
+  nav li .sub-menu{
+    width: 9em;
+  }
+
+  
+  .footer__content {
+    flex-direction: column;
+    margin: 1em auto 0 auto;
+    padding: 0;
+  }
+  .footer__section {
+    grid-column: 1/7;
+    padding: 0;
+  }
+  .footer__logo{
+    height: 100%;
+    width: 10vh;
+    margin: 0 0 1em 0;
+  }
+  .footer__text{
+    margin: 0 0 1em 0;
+    text-align: center;
+  }
+  .footer__text p{
+    font-size: .59rem;
+  }
+  .footer__text h4{
+    margin-bottom: 0;
+    font-size: .79rem;
+  }
+  .footer__text--sitios{
+    text-align: center;
+    width: 16em;
+    margin-bottom: 1.5em;
+  }
+  .footer__text--sitios p{
+    font-size: .59rem;
+  }
+  .footer__text--sitios h2 {
+    margin-bottom: .5em;
+    font-size: .79rem;
+  }
+  .footer__text--sitios h3 {
+    margin-bottom: .2em;
+    font-size: .75rem;
+  }
+  .footer__logos{
+    flex-direction: row;
+    justify-content: space-around;
+    height: 5.5em;
+  }
+  .footer h2 {
+    font-size: .7rem;
+  }
+  .footer p {
+    font-size: .6rem;
+  }
+  .footer--img{
+    background-image: url(../images/footer-mobile.svg);
+    grid-column: 1/7;
+    /* background-size: cover; */
+    /* background-position: -396px; */
+    background-size: contain;
+    background-position: bottom;
+    margin-bottom: -10px;
+  }
+
+
+  #nav-secondary{
+    display: none;
+  } 
+  #nav-fixed{
+    display: none;
+  }
+  nav a {
+   text-decoration: underline;
+  }
+  .nav-mobile {
+    display: block;
+  }
+  
+  nav li .sub-menu {
+    display: block;
+    z-index: 1;
+    margin-bottom: 1em;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .0);
+    background: none;
+  }
+  nav li .sub-menu a {
+    color: white;
+  }
+  .nav__mobile > li:nth-last-child(2){
+    margin-top: 4em;
   }
   .icon-onscroll{
     display: block;
@@ -1216,11 +1540,18 @@ MEDIA QUERYS
     height: auto;
     /* background-color: white; */
   }
+  footer{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 16vh 66vh 16vh;
+    column-gap: 2em;
+    height: 98vh;
+    background-size: 400px;
+  }
   .menu-item-514{
     margin-bottom: 4em;
   }
   .menu-item-557 {
     margin-bottom: 12em;
   }
-  }
-
+}
