--- a/css/single.css
+++ b/css/single.css
@@ -363,9 +363,9 @@ main{
   }
 }
 
-@media (min-width: 320px) and (max-width: 480px){
+@media (min-width: 320px) and (max-width: 399px){
   main {
-    grid-template-rows: 128px 80vh 101vh max-content;
+    grid-template-rows: 128px 80vh 155vh max-content;
   }
   .position-2-3 {
     grid-column: 1/7;
@@ -402,7 +402,163 @@ main{
   }
   .img--noticias img {
     height: 100%;
-    width: 20.5em;
+    width: 22.5em;
+    object-fit: cover;
+  }
+  .aside--noticias {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    align-self: center;
+  }
+  .aside--noticias h1 {
+    font-size: 1rem;
+    text-align: left;
+    padding: .5em 2.3em;
+  }
+  .aside--n-2 {
+    display: block;
+    width: 9em;
+  }
+  .aside--n{
+    display: none;
+  }
+  .aside-n{
+    width: 4.5em;
+    margin-right: auto;
+  }
+  .copete__noticia {
+    font-size: .5rem;
+    grid-row: 3/4;
+    grid-column: 1/7;
+    margin: 0em 2em;
+    background: rgba(29, 45, 124, 1);
+    padding: 3em;
+    border-radius: 0px 0px 10px 10px;
+    color: white;
+    line-height: 1.2;
+  }
+  .titulo__noticia{
+    display: none;
+    font-size: 1rem;
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+  .content__noticia {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    font-size: .9rem;
+    white-space: pre-line;
+    line-height: 1.4em;
+    margin: 9em 1.5em 1.5em 1.5em;
+
+  }
+  .content__noticia > p{
+    margin-bottom: 0em;
+  }
+  .footer__datos-2 {
+    margin: 4em 0;
+    display: flex;
+    gap: 2em;
+  }
+  .flex-end {
+    align-self: end;
+  }
+  .footer__categoria{
+    font-size: 1rem;
+  }
+  .footer__fecha p{
+    font-size: .8rem;
+  }
+  .img2__noticia {
+    grid-column: 1/7;
+    grid-row: 1/2;
+  }
+  .img2__noticia img {
+    display: block;
+    width: 100vw;
+    height: 180%;
+    object-fit: cover;
+  }
+  .footer__noticia {
+    display: none;
+    grid-column: 1/7;
+    height: max-content;
+
+  }
+  .pie_de_foto {
+    display: block;
+  }
+  .pie_de_foto-2 {
+    font-size: .5rem;
+    grid-column: 2/6;
+  }
+  .aside--noticias-2 {
+    display: none;
+  }
+  .img--noticias2 {
+    padding: 0;
+    grid-column: 1/7;
+    grid-row: 1/-1;
+    margin:0;
+  }
+  .img--noticias2 img  {
+    height: 100%;
+    width: 22.5em;
+    object-fit: cover;
+    margin-bottom: 5em;
+  }
+  .aside--noticias {
+    grid-row: 2/3;
+    background: rgba(29, 45, 124, 1);
+    padding: 0;
+  }
+  .footer__datos{
+    margin-top: .5em;
+    margin-right: 1em;
+    text-align: center;
+  }
+  
+}
+@media (min-width: 400px) and (max-width: 480px){
+  main {
+    grid-template-rows: 128px 62.3vh 115vh max-content;
+  }
+  .position-2-3 {
+    grid-column: 1/7;
+  }
+  .position-3-2 {
+    grid-column: 1/7;
+  }
+  .position-4-1 {
+    grid-column: 1/7;
+  }
+  .grid--12-3 {
+    grid-template-rows: 40% max-content 30vh ;
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0;
+  }
+  .grid--12-3-0 {
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0;
+    grid-template-rows: 15% max-content max-content;
+  }
+  .grid--12-3-1 {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: max-content;
+    padding: 0;
+  }
+  .breadcrumb {
+    display: none;
+  }
+  .img--noticias {
+    /* display: none; */
+    grid-column: 1/7;
+    grid-row: 1/2;
+    margin: 0 auto;
+  }
+  .img--noticias img {
+    height: 100%;
+    width: 25.5em;
     object-fit: cover;
   }
   .aside--noticias {
@@ -503,7 +659,7 @@ main{
   }
   .img--noticias2 img  {
     height: 100%;
-    width: 26.5em;
+    width: 25.5em;
     object-fit: cover;
     margin-bottom: 5em;
   }
