--- a/css/informaciones.css
+++ b/css/informaciones.css
@@ -303,7 +303,7 @@ main{
   .img--noticias img {
     /* margin: 0 1em 0 1em; */
     width: 70.5em;
-    height: 21.7em;
+    height: 21em;
     object-fit: cover;
   }
   .copete__noticia h1 {
@@ -365,7 +365,7 @@ main{
 
 @media (min-width: 320px) and (max-width: 399px){
   main {
-    grid-template-rows: 128px 80vh 155vh max-content;
+    grid-template-rows: 128px 80vh 180vh max-content;
   }
   .position-2-3 {
     grid-column: 1/7;
@@ -449,7 +449,7 @@ main{
     font-size: .9rem;
     white-space: pre-line;
     line-height: 1.4em;
-    margin: 9em 1.5em 1.5em 1.5em;
+    margin: 9em 1.5em 0 1.5em;
 
   }
   .content__noticia > p{
@@ -461,7 +461,7 @@ main{
     gap: 2em;
   }
   .flex-end {
-    align-self: end;
+    align-self: start;
   }
   .footer__categoria{
     font-size: 1rem;
@@ -521,7 +521,7 @@ main{
 }
 @media (min-width: 400px) and (max-width: 480px){
   main {
-    grid-template-rows: 128px 62.3vh 115vh max-content;
+    grid-template-rows: 128px 68vh 115vh max-content;
   }
   .position-2-3 {
     grid-column: 1/7;
@@ -533,7 +533,7 @@ main{
     grid-column: 1/7;
   }
   .grid--12-3 {
-    grid-template-rows: 40% max-content 30vh ;
+    grid-template-rows: 40% max-content 33vh ;
     grid-template-columns: repeat(6, 1fr);
     padding: 0;
   }
@@ -558,7 +558,7 @@ main{
   }
   .img--noticias img {
     height: 100%;
-    width: 25.5em;
+    width: 26.5em;
     object-fit: cover;
   }
   .aside--noticias {
@@ -605,7 +605,7 @@ main{
     font-size: .9rem;
     white-space: pre-line;
     line-height: 1.4em;
-    margin: 8em 1.5em 0 1.5em;
+    margin: 9em 1.5em 0 1.5em;
 
   }
   .content__noticia > p{
@@ -659,7 +659,7 @@ main{
   }
   .img--noticias2 img  {
     height: 100%;
-    width: 25.5em;
+    width: 26.5em;
     object-fit: cover;
     margin-bottom: 5em;
   }
