--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -67,7 +67,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 // @import "layouts/content-sidebar"; // Uncomment this line for a sidebar on right side of your content.
 // @import "layouts/sidebar-content"; // Uncomment this line for a sidebar on left side of your content.
-
+/*
+pruebas
+*/
+@import "layouts/base";
+@import "layouts/front-page";
+@import "layouts/header";
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
@@ -92,3 +97,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Alignments
 --------------------------------------------- */
 @import "utilities/alignments";
+
+
+
+
+
