added: npm browser-sync

--- a/src/sass/teencanta/_slideshow.scss
+++ b/src/sass/teencanta/_slideshow.scss
@@ -9,10 +9,10 @@
     display: flex;
     position: static;
     margin: auto;
-    background-color: red;
+    background-color: slateblue;
     height: min-content;
   }
-
+  
   /* Hide the images by default */
   .mySlides {
     display: none;
