--- a/src/sass/teencanta/_slideshow.scss
+++ b/src/sass/teencanta/_slideshow.scss
@@ -8,8 +8,7 @@
     //max-width: 1000px;
     display: flex;
     position: static;
-    margin: auto;
-    background-color: slateblue;
+    margin: 0 auto;
     height: min-content;
   }
   
