front-page styles almost ready

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -96,7 +96,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*
 Andacollo te encanta Styles
 */
-@import "teencanta/base";
+@import "teencanta/teencanta";
 @import "teencanta/front-page";
 @import "teencanta/header";
 @import "teencanta/slideshow";
+@import "teencanta/footer";
