--- a/src/sass/teencanta/_header.scss
+++ b/src/sass/teencanta/_header.scss
@@ -3,14 +3,13 @@
 Header Styles
 
 */
-
 .custom-header {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   row-gap: 0;
   .header-logo {
-    object-fit: fill;
+    object-fit: cover;
   }
 }
 /*
