feature/footer: finished full responsive

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -97,6 +97,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 Andacollo te encanta Styles
 */
 @import "teencanta/teencanta";
+@import "teencanta/fonts";
 @import "teencanta/front-page";
 @import "teencanta/header";
 @import "teencanta/slideshow";
