--- a/src/sass/teencanta/_footer.scss
+++ b/src/sass/teencanta/_footer.scss
@@ -3,34 +3,22 @@
 p {
   margin-bottom: 0;
 }
-.fondo-blanco {
-  background-color: var(--color-backgroundcolor);
-  height: 10rem;
-}
-.footer--svg{
+
+.footer--svg {
   display: block;
   width: 100%;
-  object-fit: scale-down;
+  object-fit: fill;
 }
-footer > section {
+footer{
   background-color: #222c3e;
-  padding: 2rem;
-}
-@media screen and (min-width: var(--tablet-screen)){
-
+  padding: 1rem;
 }
 .flex--center {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-}
-@media screen and (min-width: 640px) {
-  .flex--footer {
-    display: flex;
-  }
+  // flex-direction: column;
 }
 .footer-icons {
-  flex-direction: row;
   gap: 1rem;
 }
 .rrss-icon {
@@ -38,27 +26,91 @@ footer > section {
   height: 2.5vh;
 }
 .footer-img {
-  width: 20vw;
+  width: 6rem;
   flex-direction: row;
-  margin: 0 auto;
+  margin: 3rem auto;
   gap: 2rem;
 }
 .footer-img--white {
   margin: 0 auto;
 }
-.mtb-2{
-    margin: 2rem  0 2rem 0;
+.mtb-2 {
+  margin: 2rem 0 2rem 0;
 }
 .footer-text-center {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-family: "Raleway";
   color: #fff;
   text-align: center;
 }
-.footer-text-center > h4,
-.footer-text-center h3,
-.footer-text-center a,
-.footer-text-center a > h3 {
-    margin-top: 0px;
-    margin-bottom: .5rem;
+.title-sitios-interes {
+  border-bottom: 3px solid #bd6e29;
+  margin: 0 3rem;
+}
+.footer-item > * {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.footer-item h4,
+.footer-item p {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-// .footer-text-center
+.footer-text-center h4,
+.footer-text-center h3 {
+  font-weight: bold;
+}
+
+.footer-text-center p {
+  font-weight: lighter;
+  font-size: 0.8rem;
+}
+.footer-text-center a {
+  color: #fff;
+}
+@media screen and (min-width: 1024px) {
+  footer > section {
+    padding: 2rem;
+  }
+  .footer-text-center {
+    justify-content: space-around;
+  }
+  .flex--footer {
+    display: flex;
+    // flex-direction: w;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .footer-icons {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .footer-img {
+    width: 8rem;
+    flex-direction: column;
+    margin: 0;
+  }
+  .footer-img:nth-last-of-type(2),
+  .footer-img:nth-last-of-type(3) {
+    width: 6rem;
+  }
+
+  .footer-img--white {
+    height: min-content;
+    align-self: center;
+  }
+  .m-centro {
+    margin: 2rem auto;
+    flex-basis: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .flex--footer {
+    max-width: calc(100vw - 20vw);
+    margin: 0 auto;
+    overflow-x: hidden;
+  }
+}
