--- a/src/sass/teencanta/_header.scss
+++ b/src/sass/teencanta/_header.scss
@@ -1,72 +1,155 @@
 /*
-
-Header Styles
-
+    Header Styles
 */
 .custom-header {
   font-family: "Raleway";
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  row-gap: 0;
+  display: block;
+  // flex-direction: column;
+  // margin: 0 auto;
+  // row-gap: 0;
+  // place-items: center;
   .header-logo {
-    object-fit: cover;
+    object-fit: fill;
   }
 }
 /*
-Barra de navegación
+    Barra de navegación
 */
-.nav {
+nav {
   background: linear-gradient(90.28deg, #082b7d 0%, #0465d6 100%);
-  box-shadow: 10px 5px 15px rgba(0, 0, 0, 0.7);
+  //box-shadow: 10px 5px 15px rgba(0, 0, 0, 0.7);
+  // width: 100%;
   height: auto;
-  @media screen and (min-width: 640px){
+  padding: 0.5rem 1rem;
+  @media screen and (min-width: 640px) {
     border-radius: 0 0 10px 10px;
   }
+}
+.menu {
+  margin: 0;
+  padding: 0;
+  // margin: 1rem 2rem;
+  display: none;
+}
+.menu,
+.sub-menu {
+  list-style-type: none;
+}
+.menu a {
+  color: #fff;
+  text-decoration: underline;
+}
+.mobile-nav-toggle {
+  display: block;
+  position: relative;
+  background-color: transparent;
+  background-image: url("../images/icons/bars-solid.svg");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 1.5rem;
+  border: 0;
+  // margin: 0.5rem;
+}
+.menu[data-visible="true"] {
+  display: block;
+  transition: 2s;
+}
+.mobile-nav-toggle[aria-expanded="true"] {
+  background-image: url("../images/icons/times-solid.svg");
+}
+.mobile-nav-toggle {
+  display: none;
+}
+@media screen and (min-width: 768px) {
   .menu {
-    padding: 0;
-    margin: 1rem 2rem;
-    display: none;
+    display: grid;
+    gap: 1rem;
   }
-  .menu,
+  nav {
+    display: grid;
+    place-items: center;
+    > ul {
+      grid-auto-flow: column;
+    }
+  }
   .sub-menu {
-    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    //Pull up to overlap the parent list item very slightly
+    top: calc(100% - 0.25rem);
+    // Use the left from absolute position to shift the left side
+    left: 50%;
+    // Use translateX to shift the menu 50% of it's width back to the left
+    transform: translateX(-50%);
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 0.15em 0.25em rgba(black, 0.25);
+    padding: 0.5rem 0.5rem;
+    min-width: 16ch;
+    z-index: 2;
+
   }
-  .menu a {
-    color: #fff;
-    text-decoration: underline;
+  .sub-menu {
+    transform: rotateX(-90deg) translateX(-50%);
+    transform-origin: top center;
+    opacity: 0.3;
+    visibility: hidden;
+    transition: 280ms all ease-out;
+
+    > li {
+      margin: 0.3rem 0;
+      text-align: center;
+      > a {
+        color: black;
+      }
+    }
+    
+    
   }
-  .mobile-nav-toggle {
-    display: block;
+  
+  nav {
+    > ul {
+      > li {
+        // All links contained in the li
+        a,
+        .menu-item-has-children {
+          text-align: center;
+          display: inline-block;
+          font-size: 1rem;
+        }
+
+        // Only direct links contained in the li
+        > a,
+        .menu-item-has-children {
+          padding: 0.5rem 0.2rem;
+        }
+      }
+    }
+  }
+  .menu-item-has-children {
+
     position: relative;
-    background-color: transparent;
-    background-image: url("/src/images/icons/bars-solid.svg");
-    background-repeat: no-repeat;
-    height: 1.5rem;
-    border: 0;
-    margin: 0.5rem;
-  }
-  .menu[data-visible="true"] {
-    display: block;
-    transition: 2s;
-  }
-  .mobile-nav-toggle[aria-expanded="true"] {
-    background-image: url("/src/images/icons/times-solid.svg");
-  }
-  @media screen and (min-width: 768px) {
-    .menu {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0;
+    &:hover,
+    &:focus-within {
+      .sub-menu {
+        opacity: 1;
+        transform: rotateX(0) translateX(-50%);
+        visibility: visible;
+        transition: 280ms all 120ms ease-out;
+      }
     }
-    .sub-menu {
-      display: none;
-    }
-    .mobile-nav-toggle {
-      display: none;
+  }
+  .menu-item-has-children > a {
+    display: inline-flex;
+    align-items: center;
+
+    &:after {
+      content: "";
+      border: 0.35rem solid transparent;
+      border-top-color: rgba(#fff, 0.45);
+      margin-left: 0.25em;
+      transform: translateY(0.15em);
     }
   }
 }
