--- a/src/sass/teencanta/_slideshow.scss
+++ b/src/sass/teencanta/_slideshow.scss
@@ -7,7 +7,8 @@
   .slideshow-container {
     //max-width: 1000px;
     display: flex;
-    position: static;
+    // flex-wrap: wrap;
+    position: relative;
     margin: 0 auto;
     height: min-content;
   }
@@ -16,6 +17,7 @@
   .mySlides {
     display: none;
   }
+  
 
   /* Fading animation */
   .fade {
