--- a/src/sass/teencanta/_teencanta.scss
+++ b/src/sass/teencanta/_teencanta.scss
@@ -11,9 +11,14 @@
   --color-productos: rgba(146, 96, 55, 0.8);
 
   --ffuente-amaranth: "Amaranth";
-  --ffuente-Raleway: "Raleway";
+  // --ffuente-Raleway: "Raleway";
   --ffuente-BebasNeue: "Bebas Neue";
   --ffuente-Boogaloo: "Boogaloo";
+
+  --fs-400: clamp(1rem, 10vw + 1rem, 1.25rem);
+  --fs-600: 1.25rem;
+  --fs-900: 1.5rem;
+
 
   --tablet-screen: 640px;
   --big-tablet-screen: 860px;
@@ -21,6 +26,8 @@
   --desktop-screen: 1024px;
   --medium-desktop-screen: 1280px;
   --big-desktop-screen: 1580px;
+
+   
 }
 
 
