feature/categorias-mobile: casi listo

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -102,3 +102,4 @@ Andacollo te encanta Styles
 @import "teencanta/header";
 @import "teencanta/slideshow";
 @import "teencanta/footer";
+@import "teencanta/categorias-perfiles";
